# dish

./: .dockerignore  .env  .env.d1  .env.dev  .env.development  .env.local  .env.m1  .env.prod  .env.production  .env.test  .eslintrc.js  .gitattributes  .gitignore  .ignore  .pnp.js  .prettierignore  .prettierrc  .ultraignore  .watchmanconfig  .yarnrc  .yarnrc.yml  Dockerfile  Dockerfile-base  README.md  Riofile  app-icons-and-splash-screen-template-for-ios-vijay-oberoi.sketch  ava.config.js  dishctl.sh  docker-ci.yml  docker-compose-dev.yml  docker-compose-m1.yml  docker-compose-pull.yml  docker-compose.dev.yml  docker-compose.yml  docker-internal.yml  docker-portainer.yml  docker-registry.yml  docker-swarmprom.yml  docker-traefik.yml  dsh  (+13 more)
.buildkite/: pipeline.yml
.docker/: config.json
app/: .gitignore  Dockerfile  app.json  ava.config.cjs  babel.config.js  declaration.d.ts  eas.json  index.js  metro.config.js  metro.config.js.bak  metro.config.rnkit-bak.js  package.json  react-native.config.js  tsconfig.json  webpack.config.js
assets/: app-icons-and-splash-screen-template-for-ios-vijay-oberoi.sketch  inverse-rounded-corner.sketch  logo1.sketch  logo2.sketch  logos.sketch  map-icons.sketch  pin.sketch  web.sketch
dish-app/: .gitignore  .netrc  .ultra.cache.json  .yarnrc  AuthKey_J6D3B439WA.p8  Dockerfile  app.json  babel.config.js  declaration.d.ts  deploy.sh  eas.json  fly.toml  index.js  (+7 more)
services/bert/: Cargo.toml  Dockerfile  app.py  download_deps.sh  entry.sh  fly.toml  main.rs  roberta-sequence-classification-9.onnx
services/bert/.ci/: pre_deploy.sh
(+4660 files in other folders)
